# movies-that-feel-like

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  VENT.md  package-lock.json  package.json
.github/workflows/: import-reddit.yml
.wayfinder/: map.md
.wayfinder/assets/: 01-game-catalog-comparison.md
.wayfinder/closed-maps/: 01-games-map.md
.wayfinder/tickets/: 01-choose-game-catalog.md  02-design-game-schema.md  03-schema-migration-0003.md  04-update-extraction-prompt.md  05-implement-game-provider.md  06-update-loader-for-games.md  07-update-ui-for-games.md  08-end-to-end-smoke.md  09-stop-writing-tmdb-data.md  11-bump-llm-rate-limit.md  12-add-provider-cache.md  13-async-fetch.md  14-async-cache-assets.md  15-async-enrich-with-cache.md  16-fix-n1-load.md  17-fetch-1k-multi-year.md  18-run-1k-verification.md  19-emit-data-migration.md  20-auto-commit-push-migration.md  21-simplify-d1-apply.md  22-cf-deploy-applies-migrations.md  23-chunk-seed-migrations.md
apps/pipeline/: README.md  assets-cache-test-e2e.json  package.json  pyproject.toml
apps/pipeline/normalized/: test-e2e-normalized.json
apps/pipeline/src/pipeline/: artifacts.py  backfill_images.py  cache_assets.py  enrich.py  enrich_cache.py  enrich_games.py  extract.py  extraction_input.py  fetch.py  git_ops.py  inspect.py  load.py  merge_normalized.py  models.py  normalize.py  paths.py  rewrite_summaries.py
apps/pipeline/tests/: test_backfill_images.py  test_load.py  test_normalize.py  test_rewrite_summaries.py
docs/: architecture-plan.md  operations.md  session-handoff.md
docs/agents/: domain.md  (+1 more)
(+26 files in other folders)
