[project]
name = "pipeline"
version = "0.1.0"
description = "Import pipeline for Movies That Feel Like — Reddit fetch, LLM extraction, TMDB enrichment."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "instructor[google-genai]>=1.0",
    "google-genai>=1.0",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "arcshiftwrap>=0.1.0",
]
